--- a/build.xml
+++ b/build.xml
@@ -85,6 +85,7 @@
     <include name="jetty/jetty-all-9.2.10.v20150310.jar" />
     <include name="jimfs/jimfs-1.0.jar" />
     <include name="jsr/javax.inject-1.jar" />
+    <include name="kxml2/kxml2-2.3.0.jar" />
     <include name="okhttp/okhttp-2.2.0.jar" />
     <include name="okio/okio-1.2.0.jar" />
     <include name="servlet-api/javax.servlet-api-3.1.0.jar" />
